#26 - vertical text overflow fix

--- a/template/css/_mixins.less
+++ b/template/css/_mixins.less
@@ -60,3 +60,8 @@
     background-color: hsl(hue(@color), saturation(@color), lightness(@color)+@a);
     background-color: @color;
 }
+.column-width (@width) {
+    @rem-w: (unit(@width) / @base-font-size-px);
+    -webkit-column-width: ~"@{rem-w}rem";
+    column-width: ~"@{rem-w}rem";
+}
