--- a/template/css/default.less
+++ b/template/css/default.less
@@ -427,9 +427,15 @@ h3,
 }
 
 
+.bx-def-gal-img-column {
+    .column-width(@bx-size-gallery-img-width);
+}
 .bx-def-gal-img-size {
     .width(@bx-size-gallery-img-width);
-    .height(@bx-size-gallery-img-height);
+    .height(@bx-size-gallery-img-height);    
+}
+.bx-def-gal-unit-column {
+    .column-width(@bx-size-gallery-unit-width);
 }
 .bx-def-gal-unit-size {
     .width(@bx-size-gallery-unit-width);
